# tutorial-python-brasil

./: .gitignore  LICENSE  README.md  ambientes_virtuais.md  assincrono.md  avancadas.md  breaker.md  continua.md  desafios.md  docs.md  explorando_api.md  externos.md  ferramentas.md  integracao.md  logging.md  ola_api.md  planejando.md  projeto.md  pyenv.md  referencias.md  tdd.md
apis-simuladas/: README.md  main.py  pyproject.toml
apis-simuladas/data/account/: whoami.json  whoami_tenants.json
apis-simuladas/data/catalogo/: 155568600.json  190719400.json  212738100.json  224722100.json  225377900.json  229010200.json  aad6k4fgdj.json  aj9k9gf46e.json  be52h0ke53.json  cb9a1801k9.json
apis-simuladas/data/maestro/order/: 0b529f98-3a4a-4d2b-8970-96ef0f0e1c2e.json  2d9abb9a-f55a-4954-ba0b-ffb7878610fd.json  50630c41-729c-4ed8-8952-9c54ef1e40aa.json  66c82ca3-230a-4180-b6c5-00517371fa21.json  6c33a64a-10e3-4023-bac3-3a747df6cac1.json  829377d4-1e5d-401b-93e4-13e9f29333be.json  8595c4ed-3ef9-441d-a275-3bc00ece40f5.json  87a16048-6864-4998-9c25-e40588d6a060.json  9b2456f0-31ab-4b5f-9a0f-47b430ac5bef.json  b3e7fc63-40a7-44f8-9e66-d214466d96e6.json  c8c49886-2e3b-4f30-991d-39fb50c3c5ea.json  c9e00562-8a6f-4f9e-969e-8810578768a6.json  d70673a8-649e-466b-9b3c-9325234c4871.json  db5c7b07-a7b6-441e-a00b-156aef38a097.json  dc2420cd-b785-4434-b90d-864d061f652b.json  (+6 more)
fake-catalog/: README.md  main.py  pyproject.toml
fake-catalog/data/: 224368800.json  225186500.json  702915400.json  823332600.json  db4afbh7jj.json  hhfkc1daa1.json  jj2a97g940.json  kj9j2d9akd.json
(+36 files in other folders)
